fleet/godemo/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: godemo
spec:
  replicas: 3
