fleet/godemo/overlays/prod/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godemo
spec:
  rules:
    - host: godemo.192-168-1-103.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: godemo
                port:
                  number: 80
